--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,10 +19,15 @@ dependencies:
   flutter_screenutil: ^5.9.3
   universal_html: ^2.2.4
   visibility_detector: ^0.4.0+2
+  firebase_core: ^3.6.0
+  flutter_riverpod: ^2.4.9
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  freezed: ^2.4.6
+  build_runner: ^2.4.7
 
   flutter_lints: ^4.0.0
 
