--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_core: ^3.6.0
   flutter_riverpod: ^2.4.9
   freezed_annotation: ^2.4.1
+  flutter_fadein: ^2.0.0
 
 dev_dependencies:
   flutter_test:
